# quickpitch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  QuickPitch.pro  README.md
doc/: Doxyfile
scripts/: genCodeCov.sh  travisDocker.sh
src/: QuickPitch.pro  aubiowrapper.cpp  aubiowrapper.h  compilerfix.h  main.cpp  pitch.cpp  pitch.h  pitchbuffer.cpp  pitchbuffer.h  pitchdetector.cpp  pitchdetector.h  pitchobj.cpp  pitchobj.h  settings.cpp  settings.h  src.pro  util.h
src/qml/: NoteAccuracyIndicator.qml  OctaveIndicator.qml  Piano.qml  Settings.qml  main.qml  qml.qrc
tests/gtest/: gtest.pro  gtest_dependency.pri  main.cpp  tst_pitch.h
